--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,8 +7,8 @@ spring.jpa.hibernate.ddl-auto = update
 # = Data Source
 # ==============================================================
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/uycs_db?useUnicode=true&serverTimezone=UTC&useSSL=false
-spring.datasource.username=vitaliibaranetskyi
-spring.datasource.password=h7tls5Fwj7fKGd
+spring.datasource.username=yourname
+spring.datasource.password=yourpassword
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 server.port=3333
